# leaguepp-connector

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_package.ts  bun.lockb  package.json  sampleresponse.json
example/: CMakeLists.txt
example/src/: main.cpp
src/: client.cpp  client.hpp  connector.cpp  hash.cpp  hash.hpp  httpclient.cpp  httpclient.hpp  lockfile.cpp  lockfile.hpp  process.cpp  process.hpp  socket.hpp  wsclient.cpp  wsclient.hpp
src/connector/: CMakeLists.txt
src/connector/include/: clients.hpp  lockfile.hpp  process.hpp
src/connector/include/connector/: connector.hpp
src/connector/src/: clients.cpp  lockfile.cpp  process.cpp
src/connector/src/connector/: connector.cpp
src/example/: CMakeLists.txt
src/example/src/: main.cpp
src/include/: connector.hpp
